--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,9 +1,17 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>settings</ion-title>
+  <ion-toolbar color="tertiary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="8">
+        <ion-note>Currently there are no settings are available. Sorry for the inconvenience</ion-note>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
