--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,10 +1,22 @@
-<ion-toolbar color="primary">
+<ion-toolbar color="tertiary">
   <ion-buttons slot="start">
     <ion-menu-button></ion-menu-button>
   </ion-buttons>
-  <ion-title>Quotes List</ion-title>
+  <ion-title>Lets Play</ion-title>
 </ion-toolbar>
 <ion-content>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="5">
+        <ion-note>Please use library tab to choose your favourite quotes</ion-note>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="5">
+        <ion-note>View your favourite quotes from favourite tab anytime!</ion-note>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button tab="favourites">
