--- a/src/app/tabs/quote/quote.page.html
+++ b/src/app/tabs/quote/quote.page.html
@@ -1,22 +1,19 @@
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>{{person}}</ion-title>
-  </ion-navbar>
-
+  <ion-toolbar color="tertiary">
+    <ion-title>{{quote.person}}</ion-title>
+  </ion-toolbar>
 </ion-header>
-
-
 <ion-content padding text-center>
   <ion-card>
     <ion-card-header>
-      {{text}}
+      {{quote.text}}
     </ion-card-header>
     <ion-row>
       <ion-col>
-        <button ion-button outline small color="danger" (click) = "onClose(true)">UnFavorite</button>
+        <ion-button (click)="onClose(true)" fill="outline" color="danger">
+          Un-favourite
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-card>
-  <button ion-button color="danger" (click)="onClose()">Close</button>
 </ion-content>
