--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <!--  the side menu  -->
     <ion-menu contentId="main">
       <ion-header>
-        <ion-toolbar color="primary">
-          <ion-title>Favourite Quote</ion-title>
+        <ion-toolbar color="tertiary">
+          <ion-title>Favourite Quotes</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content >
