--- a/src/app/tabs/quotes/quotes.page.html
+++ b/src/app/tabs/quotes/quotes.page.html
@@ -19,7 +19,7 @@
     </ion-card-content>
     <ion-grid>
       <ion-row class="ion-justify-content-end">
-        <ion-col size="2">
+        <ion-col>
           <ion-button *ngIf="!isFavorite(quote)" (click)="onAddToFavorites(quote)" fill="outline" color="primary">
             Favourite
           </ion-button>
