--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-buttons slot="start">
     <ion-menu-button></ion-menu-button>
   </ion-buttons>
-  <ion-title>Lets Play</ion-title>
+  <ion-title>Quotes</ion-title>
 </ion-toolbar>
 <ion-content>
   <ion-grid>
